--- a/workshops/freetier/manifest.json
+++ b/workshops/freetier/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "Oracle Machine Learning Workshop",
+    "workshoptitle": "Analyzing Social Media Sentiment with 23c",
     "help": ["blake.hendricks@oracle.com"],
     "tutorials": [
       {
