--- a/workshops/freetier/manifest.json
+++ b/workshops/freetier/manifest.json
@@ -1,14 +1,4 @@
-{
-    "workshoptitle": "Analyzing Social Media Sentiment with 23c",
-    "help": ["blake.hendricks@oracle.com"],
-    "tutorials": [
-      {
-        "title": "Analyzing Social Media Sentiment with 23c",
-        "description": "Guide",
-        "filename": "../../oracle-ml-social-sentiment-analysis/oracle-ml-social-sentiment-analysis.md"
-      }
-    ]
-  }
+
   
   {
     "name": "Analyzing Social Media Sentiment with 23c",
@@ -20,10 +10,10 @@
 
     "files": [
       "../../intro/intro.md",
-      "../../collect/collect.md"
-      "../../dataprep/dataprep.md"
-      "../../buildsam/buildsam.md"
-      "../../evaluate/evaluate.md"
-      "../../"
+      "../../collect/collect.md",
+      "../../dataprep/dataprep.md",
+      "../../buildsam/buildsam.md",
+      "../../evaluate/evaluate.md",
+      "../../wrapup/wrapup.md"
     ]
   }
